tests/fail/01_item_fn.stderr
error: unexpected end of input, expected identifier
 --> tests/fail/01_item_fn.rs:3:1
  |
3 | #[alias(b, c,)]
  | ^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `alias` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `a` in this scope
 --> tests/fail/01_item_fn.rs:9:16
  |
9 |     assert_eq!(a(), 5);
  |                ^ not found in this scope

error[E0425]: cannot find function `b` in this scope
  --> tests/fail/01_item_fn.rs:10:16
   |
10 |     assert_eq!(b(), 5);
   |                ^ not found in this scope

error[E0425]: cannot find function `c` in this scope
  --> tests/fail/01_item_fn.rs:11:16
   |
11 |     assert_eq!(c(), 5);
   |                ^ not found in this scope
